# groupic

./: .gitignore  Cargo.toml  README.md  cargo-timing-20211118T100732Z.html  dev.example.env  dev.sh  docserver.sh  groupic.example.service  pro.sh
src/: alias.rs  gen_pic.rs  group_pic_session.rs  main.rs  util.rs
