[package]
name = "groupic"
version = "0.1.0"
authors = ["Yufan Lou <2263580+louy2@users.noreply.github.com>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
image = "0.23"
rand = "0.8"
rusttype = "0.9"
lazy_static = "1"
anyhow = "1"
tempdir = "0.3"
reqwest = "0.11"
futures = "0.3"
# twilight-model = "0.7"
# twilight-http = { version = "0.7", features = ["tracing"] }
# twilight-gateway = "0.7"
# twilight-util = { version = "0.7", features = ["builder"]}
twilight-model = { git = "https://github.com/7596ff/twilight.git", branch = "feat/model/guild-avatars" }
twilight-http = { git = "https://github.com/7596ff/twilight.git", branch = "feat/model/guild-avatars", features = ["tracing"] }
twilight-gateway = { git = "https://github.com/7596ff/twilight.git", branch = "feat/model/guild-avatars" }
twilight-util = { git = "https://github.com/7596ff/twilight.git", branch = "feat/model/guild-avatars", features = ["builder"]}
twilight-cache-inmemory = { git = "https://github.com/7596ff/twilight.git", branch = "feat/model/guild-avatars"}
